src/mermaid/ascii/timeline/snapshots/veol__mermaid__ascii__timeline__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/timeline/render.rs
expression: render_ascii(src)
---
T

+- S ------------+
|                |
|  2001 *- E1    |
|       |        |
|  2004 *- E2    |
|                |
+----------------+
