src/mermaid/ascii/timeline/snapshots/veol__mermaid__ascii__timeline__render__tests__render_long_event_wraps.snap
---
source: src/mermaid/ascii/timeline/render.rs
expression: render(src)
---
┌─ S ────────────────────────────────────────────────────────────┐
│                                                                │
│  2001 ●─ This is a really long event description that goes on  │
│                                                                │
└────────────────────────────────────────────────────────────────┘
