src/mermaid/ascii/timeline/snapshots/veol__mermaid__ascii__timeline__render__tests__render_one_section.snap
---
source: src/mermaid/ascii/timeline/render.rs
expression: render(src)
---
┌─ 2000s ──────────────────────┐
│                              │
│  2001 ●─ Wikipedia launched  │
│       │                      │
│  2004 ●─ Facebook            │
│                              │
└──────────────────────────────┘
