src/mermaid/ascii/timeline/snapshots/veol__mermaid__ascii__timeline__render__tests__render_period_with_multiple_events.snap
---
source: src/mermaid/ascii/timeline/render.rs
expression: render(src)
---
┌─ 2000s ────────────┐
│                    │
│  2004 ●─ Facebook  │
│          Gmail     │
│                    │
└────────────────────┘
