src/mermaid/ascii/timeline/snapshots/veol__mermaid__ascii__timeline__render__tests__render_timeline_minimal.snap
---
source: src/mermaid/ascii/timeline/render.rs
expression: render(src)
---
┌─ S ────────────┐
│                │
│  2001 ●─ E1    │
│                │
└────────────────┘
