src/mermaid/ascii/timeline/snapshots/veol__mermaid__ascii__timeline__render__tests__render_two_sections.snap
---
source: src/mermaid/ascii/timeline/render.rs
expression: render(src)
---
History of Tech

┌─ 2000s ──────────────────────┐
│                              │
│  2001 ●─ Wikipedia launched  │
│       │                      │
│  2004 ●─ Facebook            │
│                              │
└──────────────────────────────┘
┌─ 2010s ──────────────────────┐
│                              │
│  2010 ●─ Instagram           │
│       │                      │
│  2012 ●─ Pinterest           │
│                              │
└──────────────────────────────┘
