src/mermaid/ascii/timeline/snapshots/veol__mermaid__ascii__timeline__render__tests__render_with_title.snap
---
source: src/mermaid/ascii/timeline/render.rs
expression: render(src)
---
History of Tech

┌─ 2000s ─────────────┐
│                     │
│  2001 ●─ Wikipedia  │
│                     │
└─────────────────────┘
